--- a/FMML_M1L1.ipynb
+++ b/FMML_M1L1.ipynb
@@ -1356,11 +1356,246 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**1. Which is the best combination of features?**"
+      ],
+      "metadata": {
+        "id": "55ezwgcQFGlX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To determine the best combination of features, you should consider:\n",
+        "\n",
+        "Performance Metrics: Evaluate different feature combinations using metrics like accuracy, precision, recall, F1 score, or area under the ROC curve (AUC). You can use cross-validation to ensure that your results are robust and not overfitting to a particular subset of data.\n",
+        "\n",
+        "Dimensionality Reduction Techniques: Techniques like Principal Component Analysis (PCA) or Linear Discriminant Analysis (LDA) can help you understand the importance of each feature and how combinations might impact model performance.\n",
+        "\n",
+        "Feature Importance: For models that provide feature importance scores (like Random Forests or Gradient Boosting), you can use these scores to gauge which features are more informative and how they interact with each other."
+      ],
+      "metadata": {
+        "id": "baHfTPIWFIhb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**2. How would you test or visualize four or more features?**"
+      ],
+      "metadata": {
+        "id": "rxiOJJDfFLlb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Visualizing high-dimensional data can be challenging, but there are several techniques:\n",
+        "\n",
+        "Pairwise Plots: Create scatter plot matrices (pair plots) to visualize the relationships between pairs of features. This can help identify any linear or non-linear relationships between features.\n",
+        "\n",
+        "Dimensionality Reduction: Use methods like PCA, t-SNE, or UMAP to reduce the number of dimensions and visualize the data in 2D or 3D space. These methods can give you insights into how features relate to each other and to the classes.\n",
+        "\n",
+        "Feature Importance Heatmaps: If you have a feature importance measure, you can create heatmaps to visualize the relative importance of each feature and their interactions.\n",
+        "\n",
+        "Interactive Plots: Tools like Plotly or Bokeh allow for interactive visualizations where you can explore high-dimensional data by adjusting parameters or filtering data points."
+      ],
+      "metadata": {
+        "id": "mh2hN5GmFL0t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**3. Can you come up with your own features?**"
+      ],
+      "metadata": {
+        "id": "ngheGhTxFVri"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Yes, you can design custom features based on domain knowledge or specific patterns in your data. For example, if you’re working with image data, features might include:\n",
+        "\n",
+        "Statistical Measures: Mean, variance, skewness, or kurtosis of pixel values in different regions of the image.\n",
+        "Texture Features: Measures like entropy, contrast, or correlation derived from image texture analysis.\n",
+        "Edge Detection: Features derived from edge detection algorithms (e.g., Sobel, Canny) to capture structural information in the image.\n",
+        "Color Histograms: If working with color images, histograms of different color channels."
+      ],
+      "metadata": {
+        "id": "bA6JKhL-FaOb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**4. Will these features work for different classes other than 0 and 1?**"
+      ],
+      "metadata": {
+        "id": "COPbYkG3FdmP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Features that are effective for binary classification (e.g., classes 0 and 1) may not always be equally effective for multi-class classification. This is because:\n",
+        "\n",
+        "Feature Discriminability: Features might be very discriminative for certain classes but not for others. In a multi-class setting, the features need to differentiate between more categories, which can be more challenging.\n",
+        "\n",
+        "Feature Interactions: The relationships between features and classes might be more complex in a multi-class scenario. What works for two classes might need refinement or additional features for multiple classes.\n",
+        "\n",
+        "You might need to explore feature engineering or selection techniques specifically suited for multi-class classification to ensure that your features remain effective."
+      ],
+      "metadata": {
+        "id": "2A-5Sw00Fi0r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**5. What will happen if we take more than two classes at a time?**"
+      ],
+      "metadata": {
+        "id": "1cCopmwZFmSX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When extending to more than two classes:\n",
+        "\n",
+        "Increased Complexity: The classification problem becomes more complex as you now need to distinguish among multiple categories. This can affect how features interact with each class.\n",
+        "\n",
+        "Model Choice: Some algorithms handle multi-class problems better than others. For instance, logistic regression naturally extends to multi-class problems with techniques like one-vs-rest or softmax regression.\n",
+        "\n",
+        "Evaluation Metrics: Metrics like confusion matrices, precision, recall, F1 score, and accuracy need to be adapted for multi-class scenarios. For example, you might calculate the average F1 score across classes (micro, macro, or weighted).\n",
+        "\n",
+        "Class Imbalance: If classes are not equally represented, some classes might dominate the learning process, potentially requiring techniques like class weighting or resampling."
+      ],
+      "metadata": {
+        "id": "kfk14UkyFtzm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "> Exercise: Remember we took a subset of only the first two numbers in MNIST? Include 5 or more numbers now and try to visualise which feature works best when multiple numbers are involved. Brownie points if you use all numbers :)"
       ],
       "metadata": {
         "id": "vHE2yqmpzOXs"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.datasets import fetch_openml\n",
+        "\n",
+        "# Load MNIST dataset\n",
+        "mnist = fetch_openml('mnist_784')\n",
+        "\n",
+        "# Extract data and labels\n",
+        "X = mnist.data\n",
+        "y = mnist.target.astype(int)\n",
+        "\n",
+        "# Filter for digits 0 through 4\n",
+        "indices = np.isin(y, [0, 1, 2, 3, 4])\n",
+        "X_filtered = X[indices]\n",
+        "y_filtered = y[indices]\n"
+      ],
+      "metadata": {
+        "id": "bgyn18meFxZc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from skimage import filters\n",
+        "\n",
+        "def extract_features(images):\n",
+        "    features = []\n",
+        "    for image in images:\n",
+        "        # Reshape to 28x28 if needed\n",
+        "        image = image.reshape(28, 28)\n",
+        "\n",
+        "        # Calculate features\n",
+        "        mean_pixel = np.mean(image)\n",
+        "        variance = np.var(image)\n",
+        "        edge_magnitude = np.mean(filters.sobel(image))\n",
+        "        pixel_sum = np.sum(image)\n",
+        "\n",
+        "        features.append([mean_pixel, variance, edge_magnitude, pixel_sum])\n",
+        "\n",
+        "    return np.array(features)\n",
+        "\n",
+        "features = extract_features(X_filtered)\n"
+      ],
+      "metadata": {
+        "id": "aCyBwzMsF4qs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Create a DataFrame for easy plotting\n",
+        "df_features = pd.DataFrame(features, columns=['Mean Pixel', 'Variance', 'Edge Magnitude', 'Pixel Sum'])\n",
+        "df_features['Digit'] = y_filtered\n",
+        "\n",
+        "# Pairplot to visualize feature relationships\n",
+        "sns.pairplot(df_features, hue='Digit')\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "Cr8b0W19F64n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.manifold import TSNE\n",
+        "\n",
+        "# PCA for dimensionality reduction\n",
+        "pca = PCA(n_components=2)\n",
+        "features_pca = pca.fit_transform(features)\n",
+        "\n",
+        "# Create a DataFrame for PCA results\n",
+        "df_pca = pd.DataFrame(features_pca, columns=['PC1', 'PC2'])\n",
+        "df_pca['Digit'] = y_filtered\n",
+        "\n",
+        "# Plot PCA results\n",
+        "sns.scatterplot(data=df_pca, x='PC1', y='PC2', hue='Digit', palette='viridis')\n",
+        "plt.title('PCA of Features')\n",
+        "plt.show()\n",
+        "\n",
+        "# t-SNE for more nuanced dimensionality reduction\n",
+        "tsne = TSNE(n_components=2)\n",
+        "features_tsne = tsne.fit_transform(features)\n",
+        "\n",
+        "# Create a DataFrame for t-SNE results\n",
+        "df_tsne = pd.DataFrame(features_tsne, columns=['tSNE1', 'tSNE2'])\n",
+        "df_tsne['Digit'] = y_filtered\n",
+        "\n",
+        "# Plot t-SNE results\n",
+        "sns.scatterplot(data=df_tsne, x='tSNE1', y='tSNE2', hue='Digit', palette='viridis')\n",
+        "plt.title('t-SNE of Features')\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "KTUDlYkCF8u6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
